--- a/lib/l10n/intl_ja.arb
+++ b/lib/l10n/intl_ja.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "ja",
-  "@@last_modified": "2025-11-20 10:50:32.719576",
+  "@@last_modified": "2025-11-20 12:39:23.909449",
   "about": "このアプリについて",
   "@about": {
     "type": "String",
@@ -11356,6 +11356,16 @@
     "placeholders": {}
   },
   "@noSavedActivitiesYet": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "changeCourse": "コースを変更",
+  "changeCourseDesc": "ここでこのコースのコースプランを変更できます。",
+  "@changeCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@changeCourseDesc": {
     "type": "String",
     "placeholders": {}
   }
