--- a/lib/l10n/intl_nb.arb
+++ b/lib/l10n/intl_nb.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-11-20 10:49:09.874072",
+  "@@last_modified": "2025-11-20 12:38:47.529512",
   "about": "Om",
   "@about": {
     "type": "String",
@@ -11659,6 +11659,16 @@
     "placeholders": {}
   },
   "@noSavedActivitiesYet": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "changeCourse": "Endre kurs",
+  "changeCourseDesc": "Her kan du endre kursplanen for dette kurset.",
+  "@changeCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@changeCourseDesc": {
     "type": "String",
     "placeholders": {}
   }
