--- a/lib/l10n/intl_pl.arb
+++ b/lib/l10n/intl_pl.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "pl",
-  "@@last_modified": "2025-11-20 10:50:23.931689",
+  "@@last_modified": "2025-11-20 12:39:20.003666",
   "about": "O aplikacji",
   "@about": {
     "type": "String",
@@ -10566,6 +10566,16 @@
     "placeholders": {}
   },
   "@noSavedActivitiesYet": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "changeCourse": "Zmień kurs",
+  "changeCourseDesc": "Tutaj możesz zmienić plan kursu tego kursu.",
+  "@changeCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@changeCourseDesc": {
     "type": "String",
     "placeholders": {}
   }
