--- a/lib/l10n/intl_th.arb
+++ b/lib/l10n/intl_th.arb
@@ -4460,7 +4460,7 @@
   "playWithAI": "เล่นกับ AI ชั่วคราว",
   "courseStartDesc": "Pangea Bot พร้อมที่จะเริ่มต้นได้ทุกเมื่อ!\n\n...แต่การเรียนรู้ดีกว่ากับเพื่อน!",
   "@@locale": "th",
-  "@@last_modified": "2025-11-20 10:49:18.378350",
+  "@@last_modified": "2025-11-20 12:38:57.356247",
   "@alwaysUse24HourFormat": {
     "type": "String",
     "placeholders": {}
@@ -11624,6 +11624,16 @@
     "placeholders": {}
   },
   "@noSavedActivitiesYet": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "changeCourse": "เปลี่ยนหลักสูตร",
+  "changeCourseDesc": "ที่นี่คุณสามารถเปลี่ยนแผนการสอนของหลักสูตรนี้ได้",
+  "@changeCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@changeCourseDesc": {
     "type": "String",
     "placeholders": {}
   }
