--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -4954,5 +4954,6 @@
   "highlightVocabTooltip": "Highlight target vocab words below by sending them or practicing with them in the chat",
   "teacherModeTitle": "Teacher Mode",
   "teacherModeDesc": "Toggle to unlock all topics and activities. Course admin only.",
-  "noSavedActivitiesYet": "Activities will appear here once they are completed and saved."
+  "noSavedActivitiesYet": "Activities will appear here once they are completed and saved.",
+  "practiceActivityCompleted": "Practice activity completed"
 }
